Fix error in GenerateParentheses task solution
(according to https://www.youtube.com/watch?v=uCwqp5CKPSU)

Adjust Permutations a bit